# spherical-harmonics

./: CMakeLists.txt  main.cpp
sh/: default_image.cc  default_image.hpp  image.hpp  spherical_harmonics.cc  spherical_harmonics.hpp  spherical_harmonics_test.cc
